ports/libtiff/error.txt
tif_jpeg.c: In function 'TIFFjpeg_create_compress':
tif_jpeg.c:287:13: error: 'struct jpeg_compress_struct' has no member named 'client_data'
  sp->cinfo.c.client_data = NULL;
             ^
tif_jpeg.c: In function 'TIFFjpeg_create_decompress':
tif_jpeg.c:301:13: error: 'struct jpeg_decompress_struct' has no member named 'client_data'
  sp->cinfo.d.client_data = NULL;
             ^
gmake[2]: *** [Makefile:701: tif_jpeg.lo] Error 1
gmake[2]: *** Waiting for unfinished jobs....
libtool: compile:  /usr/didbs/current/gbs8_1/bin/gcc -DHAVE_CONFIG_H -I. -g -O2 -Wall -W -MT tif_getimage.lo -MD -MP -MF .deps/tif_getimage.Tpo -c tif_getimage.c -o tif_getimage.o >/dev/null 2>&1
mv -f .deps/tif_dirread.Tpo .deps/tif_dirread.Plo
mv -f .deps/tif_fax3.Tpo .deps/tif_fax3.Plo
mv -f .deps/tif_getimage.Tpo .deps/tif_getimage.Plo
